--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Certificate Information</title>
     <style>
         body {
-            font-family: Times New Roman, serif;
+            font-family: Arial, serif;
             margin: 0;
             text-align: left;
         }
